--- a/frontend/src/components/Actor/Actor.css
+++ b/frontend/src/components/Actor/Actor.css
@@ -6,6 +6,7 @@
   box-shadow: 3px 4px 2px 1px rgba(117, 117, 117, 0.85);
   margin: 25px 25px;
   cursor: pointer;
+  min-width: 250px;
 }
 
 .actor-image {
