--- a/frontend/src/components/CreateButton/CreateButton.css
+++ b/frontend/src/components/CreateButton/CreateButton.css
@@ -1,18 +1,40 @@
 .create-button {
   border: 2px solid black;
   border-radius: 4px;
-  width: 150px;
-  height: 25px;
-  padding: 10px 5px;
-  align-content: center;
-  justify-content: center;
+  height: 40px;
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
-  position: fixed;
-  right: 350px;
+  display: none;
+  grid-column: 3/4;
+  align-self: center;
+  margin: 0 auto;
+  padding: 5px;
 }
+
+.button-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  width: 100%;
+}
+
+.adds {
+  margin: 0 auto 4px auto;
+  font-size: 30px;
+}
+
+.create {
+  margin: 5px auto 0 auto;
+}
+
 
 .create-button:hover {
   background-color: gray;
+}
+
+@media screen and (min-width: 900px) {
+  .create-button {
+    display: flex;
+  }
+
 }
