--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,32 +5,39 @@
 
 .nav-wrapper {
   width: 70%;
-}
-
-.logo {
-  text-align: left;
-  width: 30%;
-  margin: 0;
-  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .nav-items {
-  width: 50%;
-  margin-right: 100px;
-}
-
-.nav-item {
-  padding: 10px 20px;
-  margin: 0 50px;
-  cursor: pointer;
-}
-
-.logo-item {
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0px 40px;
 }
 
 .login {
-  width: 10%;
+  justify-content: right;
+}
+
+@media only screen and (max-width: 700px) {
+  .nav-wrapper {
+    grid-template-rows: 2fr 1fr 1fr;
+  }
+
+  .logo {
+    grid-column: 1/4;
+  }
+
+  .nav-items {
+    grid-row: 2;
+    grid-column: 1/4;
+  }
+
+  .login {
+    grid-row: 3;
+    grid-column: 2/3;
+  }
+
 }
